discussion/kv_engine/128645/128645_rev29_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39042: Introduce Prometheus MetricServer

cb::prometheus::MetricServer encapsulates a prometheus-cpp Exposer.

On incoming scrape requests, a PrometheusStatCollector instance will be
used to gather stats, reusing some of the infrastructure used by
CMD_STAT.

Change-Id: I2c46729bb102d360dedc268b0fd26d935c654dcb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-09-01 09:13:21.000000000
Message: 
Uploaded patch set 29.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-01 11:20:20.000000000
Message: 
Patch Set 29: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4093/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:26: error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void" [clang-diagnostic-error]
            if (status = doTimingStats(collector); status != ENGINE_SUCCESS) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:76: error: expected ";" after expression [clang-diagnostic-error]
            if (status = doTimingStats(collector); status != ENGINE_SUCCESS) {
                                                                           ^
                                                                           ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:76: error: expected expression [clang-diagnostic-error]

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4093/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:26:
error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4093/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29894/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(413): error C2440: "=": cannot convert from "void" to "ENGINE_ERROR_CODE" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29894/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25914/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:413:26:
error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25914/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4426/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5314/ : FAILURE

Compile error at [2020-09-01T09:44:02.906Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:49:
error: void value not ignored as it ought to be
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5408/ : FAILURE

Compile error at [2020-09-01T10:22:15.983Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:49:
error: void value not ignored as it ought to be
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5408/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5511/ : FAILURE

Compile error at [2020-09-01T10:23:30.537Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:49:
error: void value not ignored as it ought to be
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5511/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13228/ : FAILURE

Compile error at [2020-09-01T10:58:51.244Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:49:
error: void value not ignored as it ought to be
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13228/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2619/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
